fix hover color in dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,6 +80,12 @@
 
       /* dark mode */
       @apply dark:text-white;
+
+      &:hover,
+      &:focus,
+      &:active {
+        @apply dark:text-black;
+      }
     }
   }
 }
